--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Категорії</title>
+    <title>Document</title>
 </head>
 <body>
     <!-- <div class="1Exercise">
@@ -37,9 +37,9 @@
             </li>
         </ul>
     </div> -->
-    <div class="2Exercise">
+    <!-- <div class="2Exercise">
         <ul id="ingredients"></ul>
-    </div>
+    </div> -->
 
     <script src="script.js"></script>
 </body>
